# DCS-Kneeboard-Lib

./: CMakeLists.txt
src/: dllmain.cpp  kneeboard.cpp  kneeboard.h
